# HeatHaiku

./: Makefile  README.md  pyproject.toml
src/HeatHaiku/: __main__.py  haiku.py  temperature.py
