[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "heathaikuu"
version = "0.1.0"
description = "Monitor CPU temps and generate haikus/poems based on thermal states"

readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
dependencies = [
    "psutil", # For CPU temperature monitoring
]

[project.optional-dependencies]
dev = [
    "ruff",
    "black",
    "pyright",
    "pytest",
]

[project.scripts]
heathaikuu = "HeatHaiku.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/HeatHaiku"]

[project.urls]
Homepage = "https://github.com/GarySkywalker-droid/HeatHaiku"
Repository = "https://github.com/GarySkywalker-droid/HeatHaiku"
Issues = "https://github.com/GarySkywalker-droid/HeatHaiku/issues"